--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,19 @@
+@article{schaffer1993selecting,
+  title={Selecting a classification method by cross-validation},
+  author={Schaffer, Cullen},
+  journal={Machine learning},
+  volume={13},
+  pages={135--143},
+  year={1993},
+  publisher={Springer}
+}
+
+@misc{berrar2019cross,
+  title={Cross-Validation.},
+  author={Berrar, Daniel and others},
+  year={2019}
+}
+
 @article{wang2014,
   title={Generalized estimating equations in longitudinal data analysis: a review and recent developments},
   author={Wang, Ming},
