--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,25 @@
+@article{jung2015ak,
+  title={AK-fold averaging cross-validation procedure},
+  author={Jung, Yoonsuh and Hu, Jianhua},
+  journal={Journal of nonparametric statistics},
+  volume={27},
+  number={2},
+  pages={167--179},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
+@article{song2021making,
+  title={Making sense of model generalizability: A tutorial on cross-validation in R and Shiny},
+  author={Song, Q Chelsea and Tang, Chen and Wee, Serena},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={4},
+  number={1},
+  pages={2515245920947067},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{schaffer1993selecting,
   title={Selecting a classification method by cross-validation},
   author={Schaffer, Cullen},
