--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,25 @@
+@article{wong2019reliable,
+  title={Reliable accuracy estimates from k-fold cross validation},
+  author={Wong, Tzu-Tsung and Yeh, Po-Yang},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={32},
+  number={8},
+  pages={1586--1594},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{zhang2015cross,
+  title={Cross-validation for selecting a model selection procedure},
+  author={Zhang, Yongli and Yang, Yuhong},
+  journal={Journal of Econometrics},
+  volume={187},
+  number={1},
+  pages={95--112},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @article{jung2015ak,
   title={AK-fold averaging cross-validation procedure},
   author={Jung, Yoonsuh and Hu, Jianhua},
