test line attempt 2

--- a/index.qmd
+++ b/index.qmd
@@ -167,7 +167,7 @@ Zhang and Yang (2015) delve into the strategic use of cross-validation for model
 Collectively, these papers illuminate the multifaceted nature of cross-validation, showcasing its critical role in model evaluation, selection, and generalization. From theoretical underpinnings to practical implementations, cross-validation emerges as an essential tool in a data scientist's arsenal, ensuring models are not only predictive but also generalizable across diverse datasets and contexts.
 
 
-## Test line
+## Test line 2
 
 ## Methods
 
