added ref. title again

--- a/index.qmd
+++ b/index.qmd
@@ -215,3 +215,5 @@ ggplot1 = murders %>% ggplot(mapping = aes(x=population/10^6, y=total))
 ### Statistical Modeling
 
 ### Conlusion
+
+### References
