--- a/index.qmd
+++ b/index.qmd
@@ -23,27 +23,47 @@ This is an introduction to understanding cross-validation, its methods, and its 
 
 Cross-validation is a cornerstone methodology in the field of data science, essential for assessing the predictive performance of statistical models and ensuring their generalizability to unseen data. This resampling technique allows researchers to evaluate how models will perform in practice, addressing critical challenges like overfitting and underfitting, thereby ensuring robustness and reliability of model predictions across various data subsets.
 
+The tutorial by Song, Tang, and Wee (2021) further elaborates on the practical application of cross-validation, presenting a structured, step-by-step approach to assessing model generalizability and emphasizing the significance of the repeated k-folds technique for reducing bias in model evaluation.
+
+The overall 5-step process to cross-validation introduced by them is as follows:
+
+1. Split the data into a training set and test set, typically 80/20 or 70/30.
+2. Fit a model to the training set and obtain the model parameters.
+3. Apply the fitted model to the test set and obtain prediction accuracy.
+4. Repeat steps one through three.
+5. Calculate the average cross-validation prediction accuracy across all repetitions [@song2021making].
+
+The difference between K-folds and repeated K-folds being as follows:
+
+Repeated K-Fold Cross-Validation enhances the robustness of K-Fold by repeating the process multiple times and averaging the results. This method helps to reduce the variability of the single trial of K-Fold cross-validation, providing a more accurate estimate of the model’s ability to generalize to unseen data. Here’s the process:
+
+**Repeated Splitting:** The data is split into k folds as before, but this process is repeated n times, with a different random split each time.
+
+**Model Evaluation:** Just like in K-Fold, models are trained and evaluated k times on each repetition with different splits, leading to n*k total evaluations.
+
+**Final Estimation:** The scores across all repeats are aggregated to provide a final measure.
+
+Notably, this technique is especially useful when the data set is not too large and there is a need to ensure the stability of the evaluation metrics across different splits of the data.
+
 Daniel Berrar's (2019) exposition on cross-validation underscores its importance in parameter tuning and model selection, providing a detailed overview of its common types, including k-fold and leave-one-out cross-validation, and emphasizing its role in balancing the bias-variance tradeoff for improved model performance [@berrar2019cross].
 
 Specifically, common types of cross-validation include:
 
-Single Hold-Out Method: Divides data into a training set and a test set,
+**Single Hold-Out Method:** Divides data into a training set and a test set,
 usually in a 70-30 or 90-10 split.
 
-K-Fold Cross-Validation: The dataset is split into k equally sized
+**K-Fold Cross-Validation:** The dataset is split into k equally sized
 folds. Each fold is used once as a test set while the rest serve as the
 training set.
 
-Leave-One-Out Cross-Validation (LOOCV): A special case of k-fold
+**Leave-One-Out Cross-Validation (LOOCV):** A special case of k-fold
 cross-validation where k equals the number of data points. Each data
 point is used once as a test set.
 
-Stratified Cross-Validation: Ensures each fold reflects the class
+**Stratified Cross-Validation:** Ensures each fold reflects the class
 proportions in the dataset, particularly useful for imbalanced datasets.
 
 This perspective is enriched by Cullen Schaffer (1993), who explores the significance of cross-validation in selecting optimal classification methods, highlighting its necessity in dealing with imbalanced datasets through stratified approaches [@schaffer1993selecting].
-
-The tutorial by Song, Tang, and Wee (2021) further elaborates on the practical application of cross-validation, presenting a structured, step-by-step approach to assessing model generalizability and emphasizing the significance of the repeated k-folds technique for reducing bias in model evaluation [@song2021making].
 
 Yoonsuh Jung and Jianhua Hu (2015) introduce an advanced k-fold averaging cross-validation procedure, advocating for the averaging of parameter estimates across folds to yield more stable and efficient outcomes. This method demonstrates significant potential in handling high-dimensional data and improving parameter estimation. 
 
@@ -61,7 +81,9 @@ For the k-fold cross-validation process, the steps are as follows:
 
 6. Calculate the overall test predictors by averaging all k test predictors.[@jung2015ak].
 
-Zhang and Yang (2015) delve into the strategic use of cross-validation for model selection, particularly in high-dimensional settings, challenging traditional approaches and proposing the integration of AIC and BIC for optimal model estimation [@zhang2015cross]. AIC (Akaike Information Criterion) and BIC (Bayesian Information Criterion) are both measures used to evaluate the quality of a statistical model, often in the context of model selection. While they are not directly used for cross-validation, they serve a similar purpose in helping to choose between different models by considering both the goodness of fit and the complexity of the model. Likewise, Wong and Yeh (2019) contribute to the discourse by examining the reliability of accuracy estimates derived from k-fold cross-validation, cautioning against the uncritical increase of replications without considering the correlation between them, and recommending specific strategies for achieving more dependable accuracy estimates [@wong2019reliable].
+Zhang and Yang (2015) delve into the strategic use of cross-validation for model selection, particularly in high-dimensional settings, challenging traditional approaches and proposing the integration of AIC and BIC for optimal model estimation [@zhang2015cross]. AIC (Akaike Information Criterion) and BIC (Bayesian Information Criterion) are both measures used to evaluate the quality of a statistical model, often in the context of model selection. While they are not directly used for cross-validation, they serve a similar purpose in helping to choose between different models by considering both the goodness of fit and the complexity of the model. 
+
+Likewise, Wong and Yeh (2019) contribute to the discourse by examining the reliability of accuracy estimates derived from k-fold cross-validation, cautioning against the uncritical increase of replications without considering the correlation between them, and recommending specific strategies for achieving more dependable accuracy estimates. More specifically, their experiments across 20 datasets indicate that accuracy estimates from different replications of k-fold cross-validation are generally highly correlated, especially as the number of folds increases. They instead recommend using a larger number of folds with fewer replications for performance evaluation. Particularly, their research concludes that ten-fold cross-validation yields the most significant scores among k-fold cross-validation techniques [@wong2019reliable].
 
 Collectively, these papers illuminate the multifaceted nature of cross-validation, showcasing its critical role in model evaluation, selection, and generalization. From theoretical underpinnings to practical implementations, cross-validation emerges as an essential tool in a data scientist's arsenal, ensuring models are not only predictive but also generalizable across diverse datasets and contexts.
 
